# src/app/interfaces/requests/allocation-request.ts
@@ -1,0 +1,8 @@
+export interface IAllocationRequest {
+	id?: number;
+	day: string;
+	startHour: string;
+	endHour: string;
+	courseId: number;
+	professorId: number;
+}
